ensure contrast for meta heading

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -769,7 +769,6 @@ $header-border: 1px solid transparentize(black, 0.8);
 }
 
 .meta-head {
-  color: var(--page-bg, $accent);
   font-size: 1em;
   margin-bottom: 0;
   text-shadow: none;
